--- a/project1/project-crawler.ipynb
+++ b/project1/project-crawler.ipynb
@@ -94,7 +94,7 @@
     "            page = response.read().decode('utf-8')\n",
     "            data.append(page)\n",
     "            \n",
-    "            directory = path + '/plain/' + str(year) + '/' + str(month) + '/'\n",
+    "            directory = path + '/plain/' + str(year) + '/' + str(month).zfill(2) + '/'\n",
     "            parse_page(page, directory)\n",
     "    return"
    ]
